--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.675.0",
+    "dotenv": "^16.4.5",
     "redis": "^4.7.0"
+  },
+  "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/node": "^22.7.7"
   }
 }
